--- a/S00_background.Rmd
+++ b/S00_background.Rmd
@@ -24,7 +24,7 @@ htmltools::img(src = knitr::image_uri("images/ww_master_orange.png"),
               style = 'position:absolute; top:5; right:0; padding:10px; width:170px; height:120px')
 ```
 
-*This is the course handbook for WolfWorks: An introduction to R.*
+*This is the course handbook for WolfWorks: Reproducible Research with R.*
 
 ***
 
@@ -35,14 +35,14 @@ College, University of Cambridge. All data has been generated specifically for
 demonstration purposes and does not reflect real-life data.  
   
 **Who:** This course is aimed at university students and other researchers. 
-Attendees are not expected to have any previous experience with R. All tools 
-will be introduced from the most basic level upward.  
+Attendees are expected to have *some* previous experience with coding in R as the
+basics of the R language and using RStudio will not be covered in this workshop.
 
 **Where:** The Roger Needham Room, Wolfson College, University of Cambridge. 
 Unfortunately, this workshop is only available for in-person attendees and cannot
 be joined virtually.  
 
-**When:** November 16th 2023  
+**When:** November 23rd 2023  
 
 **Contact**: Please e-mail Laura Jeffrey (lkj26@cam.ac.uk) or Charlotte Hutchings
 (ch941@cam.ac.uk) for more details.  
@@ -72,13 +72,13 @@ and one in the afternoon (1.30PM - 4PM). Each session will cover several key
 topics. 
 
 ```{r, echo = FALSE}
-tabl1 <- data.frame("Session" = c(rep(c("Morning"), times = 4), rep(c("Afternoon"), times = 2)),
-                    "Topic" = c("An introduction to R and RStudio", 
-                                "Objects in R", 
-                                "Data structures in R",
-                                "Starting with your own data",
-                                "An introduction to the tidyverse",
-                                "Data visualisation using ggplot"))
+tabl1 <- data.frame("Session" = c("Morning", "Morning",
+                                  "Morning", "Morning", "Afternoon"),
+                    "Topic" = c("A summary of R and RStudio", 
+                                "Projects in RStudio", 
+                                "Writing in RMarkdown",
+                                "Rendering RMarkdown",
+                                "Tips for clean coding"))
 
 knitr::kable(tabl1, 
              col.names = c("Session", "Topic"),
