--- a/S03_clean_reproducible_coding.Rmd
+++ b/S03_clean_reproducible_coding.Rmd
@@ -1,11 +1,27 @@
 ---
-title: "Lesson 2: Writing clear, reproducible code"
-author: "Charlotte Hutchings"
-date: "Nov 2023"
+title: "Lesson 3: Tips for clear, reproducible code"
+output: 
+  html_document:
+    toc: FALSE
 ---
+
+<style type="text/css">
+
+body, td {
+   font-size: 18px;
+}
+code.r{
+  font-size: 14px;
+}
+pre {
+  font-size: 14px
+}
+</style>
 
 Objectives:
 
 * Understand the importance of documenting what is being done in your code
 * Generate modular code 
 * Reduce repetition through the use of `loops` and `functions`
+
+***
