--- a/S00_setup.Rmd
+++ b/S00_setup.Rmd
@@ -18,7 +18,7 @@ pre {
 }
 </style>
 
-*This is the course handbook for WolfWorks: An introduction to R.*
+*This is the course handbook for WolfWorks: Reproducible Research with R.*
 
 ***
 
