--- a/S02_R_markdown.Rmd
+++ b/S02_R_markdown.Rmd
@@ -36,7 +36,7 @@ type and (2) a writing style / language.
 
 The **R Markdown file** is a document which contains a mixture of text and code.
 The document contains three key features - a header, some text (written in the
-markdown language) and code chunks. This document can be **_rendered_** into
+markdown language) and code chunks. This document can be _rendered_ into
 various outputs including word documents, pdf files and websites. The final 
 output will not only contain text and code, but also the resulting output of 
 any executed code e.g., figures and tables. 
@@ -61,10 +61,12 @@ For example, the header contains information such as the document title, author
 and date. It is also the place where we can specify the document type to render
 to (e.g., `.html`, `.pdf` or `.doc`) and whether we want any table of cotents in
 the output. We will see several of these options throughout the course.
+<br>
 
-```{r, echo = FALSE, fig.align = "center", out.width = "80%"}
+```{r, echo = FALSE, fig.align = "center", out.width = "60%"}
 knitr::include_graphics("images/markdown_header.png")
 ```
+<br>
 <br>
 
 ### Markdown
@@ -78,6 +80,7 @@ Within the Markdown language there are additional ways to format text e.g.,
 inclusion of headings and sub-headings, bullet point and numbered lists,
 bold and italic fonts etc. We will come across how to achieve these style 
 features throughout the workshop.
+<br>
 <br>
 
 ### Code chunks
@@ -129,17 +132,17 @@ that will happen if we click the `knit` button at the top of the window. If we
 later want to render the document to a `.pdf` or otherwise, these options still 
 exist in the drop-down from `knit`.
 
-```{r, echo = FALSE, fig.align = "left", out.width = "80%"}
+```{r, echo = FALSE, fig.align = "left", out.width = "20%"}
 knitr::include_graphics("images/knit_button.png")
 ```
 
-```{r, echo = FALSE, fig.align = "left", out.width = "80%"}
+```{r, echo = FALSE, fig.align = "left", out.width = "20%"}
 knitr::include_graphics("images/knit_options.png")
 ```
 
 Finally, we can add our title to the header at the top of our page.
 
-```{r}
+```{r, echo = FALSE}
 knitr::include_graphics("images/solution_header.png")
 ```
 
@@ -155,6 +158,8 @@ The main body of text in an R Markdown file is written in Markdown syntax. There
 are a lot of things that we can do with Markdown syntax, far more than can be
 covered in this workshop. We will cover the key aspects of Markdown which you 
 are most likely to want to use.
+<br>
+<br>
 
 ### Headings
 
@@ -162,11 +167,21 @@ For all forms of report, whether it be `.pdf` or a website, headings and
 subheadings are essential for clear writing. In Markdown headings are created
 using the `#` operator. The more `#` operators in a row, the smaller the 
 heading appears in our rendered document.
-
+`# Heading 1 - biggest`
 # Heading 1 - biggest
+<br>
+
+`## Heading 2 - still big`
 ## Heading 2 - still big
+<br>
+
+`### Heading 3 - smaller`
 ### Heading 3 - smaller
+<br>
+
+`#### Heading 4 - smallest`
 #### Heading 4 - smallest
+<br>
 
 
 ### Inline text formating
@@ -176,6 +191,7 @@ To make test italic use `*single asterisks*` or `_single underscore_`
 To make text ^superscript^ use `^caret^`  
 To make test ~subscript~ use `~tilde~`
 To format text to look like code use ``backticks``
+<br>
 
 ### Line breaks
 
@@ -186,5 +202,6 @@ on the line you wish to be empty and press `enter` again.
 
 Some writing.  
 `<br>` 
+<br>
 <br>
 Some more writing.
